WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211310
scrollableAreaForScrollingNodeID() gives the wrong answer for the FrameView
https://bugs.webkit.org/show_bug.cgi?id=211310
Summary
scrollableAreaForScrollingNodeID() gives the wrong answer for the FrameView
Simon Fraser (smfr)
Reported
2020-05-01 12:17:01 PDT
scrollableAreaForScrollingNodeID() gives the wrong answer for the FrameView
Attachments
Patch
(2.83 KB, patch)
2020-05-01 12:18 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-01 12:18:23 PDT
Created
attachment 398215
[details]
Patch
EWS
Comment 2
2020-05-02 12:35:07 PDT
Committed
r261053
: <
https://trac.webkit.org/changeset/261053
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398215
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-02 12:36:14 PDT
<
rdar://problem/62772051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug